--- a/02PrimerosPasos/css/styleestructura.css
+++ b/02PrimerosPasos/css/styleestructura.css
@@ -20,12 +20,13 @@ nav, section, footer, aside, article{
     border: 4px solid rgb(168, 94, 202);
     margin: 1rem;
     border-radius: 10px;
-    padding: 1rem;
+    padding-left: 1rem;
+    text-align: justify;
 }
 
 article, aside {
     width: 40%;
-    display: incline-block;
+    display: inline-block;
     height: 300px;
 }
 
