--- a/01 curriculo/css/stylecurriculo.css
+++ b/01 curriculo/css/stylecurriculo.css
@@ -158,3 +158,21 @@ body {
 .aboutme {
     text-align: justify;
 }
+
+.index-link{
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 8px 12px;
+    border-radius: 4px;
+    display: inline-block;
+    transition: all 0.3s ease;
+}
+
+.index-link:hover{
+    background-color: white;
+    color: black;
+    font-weight: bold;
+    font-size: 16px;
+    text-decoration: none;
+}
