--- a/03 login/css/stylelogin.css
+++ b/03 login/css/stylelogin.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    /*background-image: url(./image/fondo.jpg);*/
+    background-image: url(../img/fondo.jpg);
     background-size: cover;
     color: aqua;
     display: flex;
