--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
 * {
     background-color: blanchedalmond;
     font-size: 20px;
-    
+    padding: 0;
+    margin: 0;
 }
+
 
 .container-table {
     width: 100%;
@@ -58,4 +60,22 @@
 .description{
     font-size: 14px;
     color: #555;
+}
+
+footer {
+    background-color: black;
+    text-align: center;
+    margin-top:50px;
+    width:100%;
+    height:200px;
+    display: flex;
+    flex-direction: column;
+}
+
+footer a{
+    background-color: black;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 25px;
 }
