--- a/css/style.css
+++ b/css/style.css
@@ -65,17 +65,29 @@
 footer {
     background-color: black;
     text-align: center;
-    margin-top:50px;
-    width:100%;
-    height:200px;
-    display: flex;
-    flex-direction: column;
+    color: white;
+    padding: 20px 0;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    height: 80px;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
 }
 
-footer a{
-    background-color: black;
+
+footer a {
     color: white;
     text-decoration: none;
     font-weight: bold;
+    font-size: 18px;
+    padding: 0 15px;
+    transition: color 0.3s;
+    background-color: black;
+}
+
+footer a:hover {
+    color: black;
+    background-color: white;
     font-size: 25px;
 }
