--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,9 @@ footer a {
 }
 
 footer a:hover {
+    transition: all 0.3s ease;
     color: black;
     background-color: white;
-    font-size: 25px;
+    font-size: 20px;
+    padding-bottom: 3px;
 }
