--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,18 @@
     font-size: 20px;
     padding: 0;
     margin: 0;
+    font-family: sans-serif;
 }
 
+header{
+    width: 100%;
+    text-align: center;
+    margin-top: 20px;
+}
+
+p{
+    text-align: center;
+}
 
 .container-table {
     width: 100%;
@@ -66,7 +76,7 @@ footer {
     background-color: black;
     text-align: center;
     color: white;
-    padding: 20px 0;
+    padding-top: 50px;
     width: 100%;
     position: fixed;
     bottom: 0;
