--- a/II/05 Ejercicios/css/ejerciciosstyle.css
+++ b/II/05 Ejercicios/css/ejerciciosstyle.css
@@ -1,7 +1,9 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+* {
+    background-color: blanchedalmond;
+    font-size: 20px;
+    padding: 0;
+    margin: 0;
+    font-family: sans-serif;
 }
 
 .container-table {
