--- a/II/05 Ejercicios/Ejercicio 1/css/styleejercicio1.css
+++ b/II/05 Ejercicios/Ejercicio 1/css/styleejercicio1.css
@@ -5,6 +5,10 @@
     font-family: sans-serif;
 }
 
+body{
+    background-color: antiquewhite;
+}
+
 .container-form{
     background-color: #2c3e50;
     border-radius: 10px;
@@ -36,9 +40,7 @@ footer, footer a{
 .container-footer{
     box-shadow: 5px 5px 10px #00000080;
     width: 200px;
-    margin-top: 3rem;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 3rem auto 3rem auto;
     text-align: center;
     padding: 10px;
     background-color: #000000;
