--- a/II/05 Ejercicios/Ejercicio 2/css/styleejercicio2.css
+++ b/II/05 Ejercicios/Ejercicio 2/css/styleejercicio2.css
@@ -12,16 +12,21 @@ body{
 .container-form{
     background-color: #2c3e50;
     border-radius: 10px;
-    width: 30rem;
+    width: 50rem;
+    height: 30rem;
     margin: 6rem auto auto auto;
     color: #fff;
     box-shadow: 5px 5px 10px #00000080;
     text-align: center;
     padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .container-form table{
-    padding: 1rem 6rem 1rem 1.5rem;
+    padding: 1rem 1.5rem 1rem 1.5rem;
 }
 
 .container-form td{
@@ -31,6 +36,12 @@ body{
 
 .btn_registro{
     margin: 6px;
+}
+
+.output{
+    width: 20rem;
+    height: 5rem;
+    resize: none;
 }
 
 footer, footer a{
