--- a/II/05 Ejercicios/Ejercicio 1/css/styleejercicio1.css
+++ b/II/05 Ejercicios/Ejercicio 1/css/styleejercicio1.css
@@ -12,12 +12,17 @@ body{
 .container-form{
     background-color: #2c3e50;
     border-radius: 10px;
-    width: 30rem;
+    width: 40rem;
+    height: 15rem;
     margin: 6rem auto auto auto;
     color: #fff;
     box-shadow: 5px 5px 10px #00000080;
     text-align: center;
     padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .container-form table{
